--- a/examples/basic_demo.html
+++ b/examples/basic_demo.html
@@ -57,6 +57,7 @@
 <script src="../bower_components/react/react-with-addons.min.js"></script>
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/underscore/underscore.js"></script>
+<script src="../bower_components/file-saver/FileSaver.js"></script>
 <!-- table components -->
 <script src="../build/CellStyleBuilder.js"></script>
 <script src="../build/DataAggregation.js"></script>
