Adding in a condition to check if the colTag does exist before subtotalling.

--- a/examples/basic_demo.html
+++ b/examples/basic_demo.html
@@ -57,13 +57,12 @@
 <script src="../bower_components/react/react-with-addons.min.js"></script>
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/file-saver/FileSaver.js"></script>
+<script src="../bower_components/file-saver/FileSaver.js"></script>\
 <!-- table components -->
 <script src="../build/CellStyleBuilder.js"></script>
 <script src="../build/DataAggregation.js"></script>
 <script src="../build/DOMBuilder.js"></script>
 <script src="../build/ExportHandlers.js"></script>
-<script src="../build/InfiniteScroll.js"></script>
 <script src="../build/NumericFilterPanel.js"></script>
 <script src="../build/ReactTableEventHandlers.js"></script>
 <script src="../build/SortUtils.js"></script>
