--- a/examples/basic_demo.html
+++ b/examples/basic_demo.html
@@ -10,18 +10,6 @@
             font-family: Tahoma, Arial, sans-serif;
         }
 
-        td.green {
-            font-weight: bold;
-            background-color: #009941;
-            color: #ffffff;
-        }
-
-        td.red {
-            font-weight: bold;
-            background-color: darkred;
-            color: #ffffff;
-        }
-
         .demo-label {
             font-weight: 500;
             color: #ffffff;
@@ -56,8 +44,6 @@
 <br/>
 <script src="../bower_components/react/react-with-addons.min.js"></script>
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/file-saver/FileSaver.js"></script>\
 <!-- table components -->
 <script src="../build/CellStyleBuilder.js"></script>
 <script src="../build/DataAggregation.js"></script>
@@ -71,7 +57,7 @@
 <script src="../build/TreeRasterizer.js"></script>
 <script src="../build/MenuItemAddons.js"></script>
 <script src="../build/ReactTable.js"></script>
-<!--&lt;!&ndash; end table components &ndash;&gt;-->
+<!--<!-- end table components -->
 <!--<script src="../dist/react-table.js"></script>-->
 <script src="basic_demo.js"></script>
 
